Fix whitespace issue under featured image on main page

--- a/03_02/style-main.css
+++ b/03_02/style-main.css
@@ -306,7 +306,7 @@ CSS Grid layout for modern browsers:
 
 	@media screen and (min-width: 50em)  { .site {max-width: none; display: grid; grid-template-columns: 15em auto;} 
 
-	.masthead {grid-column: 1/2;}
+	.masthead {grid-column: 1/2; grid-row: 1/3;}
 
 	.feature {grid-column: 2/3;}
 
